--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Inserts needless commas into your sentences.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/vyridian17/needless-commas/issues"
   },
-  "homepage": "https://github.com/vyridian17/needless-commas#readme"
+  "homepage": "https://github.com/vyridian17/needless-commas#readme",
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^9.1.0"
+  }
 }
