--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/vyridian17/needless-commas.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Michael Dale",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/vyridian17/needless-commas/issues"
