--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,12 @@ jobs:
           node-version: ${{ matrix.node-version }}
       # Runs a single command using the runners shell
       - name: npm install and test
-        run: |
-        npm install
-        npm test
+        run: npm install
+        run: npm test
+
+
+      # Runs a set of commands using the runners shell
+#       - name: Run a multi-line script
+#         run: |
+#           echo Add other actions to build,
+#           echo test, and deploy your project.
